--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.body::-webkit-scrollbar {
+  display: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.backgroundNews::-webkit-scrollbar {
+  display: none;
+}
+
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+i {
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container, .containerLoadingLogo {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 400px;
+  height: 850px;
+  margin: auto;
+  /* margin-top: 50px; */
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px 0px;
 }
+
+.header {
+  display: flex;
+  width: 100%;
+  height: 8%;
+  justify-content: center;
+  background-color: #4d93ff;
+  /* border-top-left-radius: 10px; */
+  /* border-top-right-radius: 10px; */
+}
+
+.body {
+  width: 100%;
+  height: 84%;
+  background-color: #ebf0f6;
+  /* padding: 10px; */
+  overflow: scroll;
+}
+
+.footer {
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+  height: 8%;
+  background-color: white;
+  /* border-bottom-right-radius: 10px; */
+  /* border-bottom-left-radius: 10px; */
+  border-bottom: 2px solid #dbdbdb;
+}
+
+.containerLoadingLogo{
+  z-index: 99;
+}
+
