--- a/src/components/Tab1/tab1.css
+++ b/src/components/Tab1/tab1.css
@@ -1,4 +1,3 @@
-
 /* ----------------------------- HEADER ----------------------------- */
 
 #header_right-i {
@@ -56,18 +55,17 @@
   color: white;
 }
 
-.header_top{
+.header_top {
   display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
 }
 
-.header_bottom{
+.header_bottom {
   width: 100%;
   display: flex;
 }
-
 
 /* ----------------------------------- BODY  -----------------------------------*/
 
@@ -78,6 +76,16 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+#showUiSearchCss {
+  transform: translateY(0px);
+  transition: .5s;
+}
+
+#hideUiSearchCSs {
+  transform: translateY(-50px);
+  transition: .5s;
 }
 
 .body_item1 {
@@ -169,15 +177,13 @@
 
 /* ----------------------------------- END FOOTER  -----------------------------------*/
 
-
 /* ----------------------------------- SEARCH -----------------------------------  */
 
-.header_bottom{
+.header_bottom {
   display: none;
   width: 100%;
   display: flex;
 }
-
 
 #search_div-input {
   width: 100%;
