--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -21,25 +21,21 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
   border-radius: 10px;
+  background-color: rgb(0,0,0,.5);
 }
 
 .navbar_content {
+  position: relative;
   width: 65%;
   height: 100%;
-  animation: navbar_content .5s;
-}
-
-@keyframes navbar_content {
-  0%{
-    transform: translateX(-70%);
-  }
+  transform: translateX(-260px);
 }
 
 .navbar_outsite{
   width: 35%;
   height: 100%;
+  /* background-color: rgb(0,0,0,.5); */
 }
 
 .navbar_content-top {
