--- a/src/components/uiMessageSuccess/uiMessageSuccess.css
+++ b/src/components/uiMessageSuccess/uiMessageSuccess.css
@@ -1,5 +1,25 @@
 .backgroundUiMessageSuccess{
+    display: flex;
+    position: absolute;
     width: 100%;
     height: 100%;
+    top: 0;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(0,0,0,.5);
+    z-index: 999999;
+}
+
+.backgroundUiMessageSuccess_form{
+    display: flex;  
+    width: 80%;
+    height: 15%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: white;
+    font-size: 18px;
+    box-shadow: 0px 5px 10px 0px;
 }
