--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,85 +1,3 @@
-
-/* ----------------------------------- BODY  -----------------------------------*/
-
-/* ----------------------------------- BODY ITEM1  -----------------------------------*/
-
-#item1_img {
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#showUiSearchCss {
-  transform: translateY(0px);
-  transition: .5s;
-}
-
-#hideUiSearchCSs {
-  transform: translateY(-50px);
-  transition: .5s;
-}
-
-.body_item1 {
-  display: flex;
-  width: 100%;
-  height: 230px;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.body_item1-img {
-  width: 50%;
-  height: 100%;
-}
-
-.body_item1-content {
-  width: 50%;
-  height: 100%;
-  background-color: #ffffff;
-}
-
-.item1_content-category {
-  cursor: pointer;
-  display: flex;
-  width: 100%;
-  height: 25%;
-  border-top-right-radius: 10px;
-  align-items: center;
-}
-
-.item1_content-title1 {
-  width: 100%;
-  height: 53px;
-  padding: 2px 15px;
-  overflow: hidden; 
-  font-weight: bold;
-  font-size: 15px;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-}
-
-.item1_content-description1 {
-  width: 100%;
-  height: 30%;
-  padding: 2px 15px;
-  overflow: hidden;
-  text-overflow: -o-ellipsis-lastline;
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  font-size: 14px;
-  -webkit-box-orient: vertical;
-  margin-top: 15px;
-  }
-
-
-/* ----------------------------------- END BODY ITEM1  -----------------------------------*/
-
-/* ----------------------------------- END BODY  -----------------------------------*/
-
 /* ----------------------------- HEADER ----------------------------- */
 
 #header_right-i {
@@ -112,6 +30,11 @@
   cursor: pointer;
   font-weight: bold;
   font-size: 15px;
+}
+
+#description_p {
+  cursor: pointer;
+  font-size: 14px;
 }
 
 .header_left {
@@ -238,4 +161,3 @@
 }
 
 /* ----------------------------------- END SEARCH -----------------------------------  */
-
