--- a/src/components/loading/backgroundLogo/backgroundLogo.css
+++ b/src/components/loading/backgroundLogo/backgroundLogo.css
@@ -1,18 +1,36 @@
-
-#backgroundLogo_img{
-    position: absolute;
-    width: 120px;
-    height: 120px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+#backgroundLogo_img {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
-.backgroundLogo{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgb(83, 151, 253) )
+.containerLoadingLogo {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 400px;
+  height: 850px;
+  margin: auto;
+  /* margin-top: 50px; */
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px 0px;
+}
+
+.backgroundLogo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(255, 255, 255),
+    rgb(83, 151, 253)
+  );
 }
