--- a/src/App.css
+++ b/src/App.css
@@ -40,19 +40,16 @@ i {
   width: 400px;
   height: 850px;
   margin: auto;
-  /* margin-top: 50px; */
   border-radius: 10px;
   box-shadow: 0px 5px 10px 0px;
 }
 
-.header {
+.headerContent {
   display: flex;
   width: 100%;
   height: 8%;
   justify-content: center;
   background-color: #4d93ff;
-  /* border-top-left-radius: 10px; */
-  /* border-top-right-radius: 10px; */
 }
 
 .body {
