--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,23 @@
+
+#moreProduct{
+  color: white;
+  font-size:  23px;
+}
+.moreProduct{
+  display: flex;
+  cursor: pointer;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background: #4d93ff;
+  bottom: 9%;
+  right: 3%;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+}
+
 /* ----------------------------- HEADER ----------------------------- */
 
 #header_right-i {
@@ -16,6 +36,7 @@
 #header_left-p {
   font-size: 20px;
   font-weight: 100px;
+  text-transform: uppercase;
 }
 
 #category_span {
@@ -78,33 +99,31 @@
   font-size: 13px;
   color: rgb(189, 189, 189);
   text-transform: uppercase;
+  margin-left: 10px;
 }
 
 .footer_tab1 {
-  width: 50%;
+  position: relative;
+  display: flex;
+  width: 70%;
   height: 100%;
-}
-
-.footer_tab2 {
-  width: 50%;
-  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer_icon {
   display: flex;
   width: 100%;
-  height: 50%;
-  align-items: flex-end;
+  height: 70%;
+  align-items: center;
   justify-content: center;
 }
 
-.footer_title {
-  display: flex;
-  width: 100%;
-  height: 50%;
-  justify-content: center;
-  padding-top: 5px;
+.backgroundChooseTab{
+  width: 100px;
+  height: 100%;
 }
+
 
 /* ----------------------------------- END FOOTER  -----------------------------------*/
 
